# matrix-factorization-torch

./: .editorconfig  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .semgrepignore  .yamlfmt  Dockerfile  LICENSE  README.md  bentofile.yaml  biome.json  compose.yaml  pyproject.toml  renovate.json  requirements.txt  trivy.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release.yml
.github/workflows/: CODEOWNERS  automerge.yml  ci.yml  dependabot.yml  ossf.yml  pr.yml  scans.yml
.trunk/: trunk.yaml
.trunk/configs/: .yamllint.yaml
mf_torch/: flaml.py  lightning.py  losses.py  models.py  params.py  ray.py
mf_torch/bentoml/: models.py  prepare.py  schemas.py  service.py
mf_torch/data/: lightning.py  load.py  prepare.py
src/matrix_factorization_pytorch/: lightning.py  losses.py  models.py  ray.py
src/matrix_factorization_pytorch/data/: lightning.py  load.py  movielens.py  prepare.py
src/mf_torch/: lightning.py  models.py
src/mf_torch/data/: lightning.py  load.py  prepare.py
tests/mf_torch/data/: test_load.py
xfmr_rec/: flaml.py  lightning.py  losses.py  models.py  params.py  ray.py
xfmr_rec/bentoml/: prepare.py  service.py
xfmr_rec/data/: lightning.py  load.py  prepare.py
