[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mf_torch"
version = "0.1.0"
description = "Matrix Factorization Recommender Models in PyTorch with MovieLens"
authors = [{ name = "YuXuan Tay", email = "wyextay@gmail.com" }]
license = "MIT"
requires-python = "~=3.12"
dependencies = [
  "bentoml~=1.3",
  "flaml[blendsearch]~=2.3",
  "jsonargparse[signatures]~=4.35",
  "lancedb>=0.19",
  "lightning~=2.5",
  "loguru>=0.7,<0.8",
  "mlflow~=2.19",
  "pandas~=2.2",
  "polars[pandas]~=1.19",
  "tensorboard~=2.18",
  "torch~=2.5",
  "xxhash~=3.4",
]

[dependency-groups]
dev = ["onnxruntime~=1.20", "onnxscript>=0.2.0"]

[project.optional-dependencies]
ray = ["ray[data,train,tune]~=2.42"]

[project.scripts]
data = "mf_torch.data.prepare:main"
lightning = "mf_torch.lightning:cli_main"
flaml = "mf_torch.flaml:flaml_tune"
bentoml = "mf_torch.bentoml.prepare:main"

[tool.uv.sources]
torch = [{ index = "torch-cpu", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "E501",   # line-too-long
  "S311",   # suspicious-non-cryptographic-random-usage
  "COM812", # missing-trailing-comma, conflicts with ruff formatter
  "ERA001", # commented-out-code
  "ISC001", # single-line-implicit-string-concatenation, conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "S101", # assert
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
