[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mf_torch"
version = "0.1.0"
description = "Matrix Factorization Recommender Models in PyTorch with MovieLens"
authors = [
  { name = "YuXuan Tay", email = "5795122+yxtay@users.noreply.github.com" },
]
license = "MIT"
requires-python = ">=3.12,<4"
dependencies = [
  "bentoml~=1.3",
  "jsonargparse[signatures]~=4.35",
  "lancedb>=0.19,<1.0",
  "lightning~=2.5,<2.5.1",
  "loguru>=0.7,<1.0",
  "mlflow-skinny~=3.1",
  "polars[pandas]~=1.19",
  "pylance>=0.23,<1.0",
  "sentence-transformers[onnx,train]~=5.0",
  "tensorboard~=2.18",
  "torch~=2.5",
]

[dependency-groups]
dev = [
  "flaml[automl,blendsearch]~=2.3",
  "mlflow",
  "pytest~=8.4",
  "ray[train,tune]~=2.42",
  "standard-imghdr~=3.13.0",
]

[project.scripts]
data = "mf_torch.data.prepare:main"
lightning = "mf_torch.lightning:cli_main"
flaml = "mf_torch.flaml:flaml_tune"
bentoml_cli = "mf_torch.bentoml.prepare:main"

[tool.bentoml.build]
service = "mf_torch.bentoml.service:Service"
description = "file: ./README.md"
include = ["**/*.py", "README.md"]
envs = [{ name = "UV_NO_CACHE", value = "1" }]

[tool.bentoml.build.python]
packages = [
  "lancedb",
  "loguru",
  "pandas",
  "pylance",
  "sentence-transformers[onnx]",
]
extra_index_url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # pydocstyle
  "E501",    # line-too-long
  "S101",    # assert
  "S311",    # suspicious-non-cryptographic-random-usage
  "COM812",  # missing-trailing-comma, conflicts with ruff formatter
  "ERA001",  # commented-out-code
  "ISC001",  # single-line-implicit-string-concatenation, conflicts with ruff formatter
  "PLC0415", # import-outside-top-level
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
